fix white space issue with sidenav

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,17 +28,16 @@
     background-color: #f2f2f2;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 60px;
 }
 
-.sidenav a {
+/*.sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
     display: block;
     transition: 0.3s
-}
+}*/
 
 .sidenav a:hover, .offcanvas a:focus{
     color: #f1f1f1;
@@ -62,17 +61,43 @@
   .sidenav a {font-size: 18px;}
 }
 
-.arrow-button {
-  width: 40px;
-  height: 100vh;
+.whole {
+  display: inline-block;
+  height: 500px;
+  width: 500px;
+  background-color: orange;
+/*   padding: 5px; */
+}
+
+#left {
+  width: 10%;
+  height: 100%;
   background-color: purple;
   display: inline-block;
+}
+
+#right {
+
+  width: 90%;
+  height: 100%;
+  background-color: blue;
+  display: inline-block;
+  float: right;
+  color: white;
+}
+
+.arrow-button {
+  width: 10%;
+  height: 100%;
+  background-color: purple;
+  display: inline-block;
+  margin-right: -500px;
   /*float: left;*/
   /*overflow: hidden;*/
 }
 
 #arrow {
-  width: 40px;
+  width: 25px;
   height: auto;
   position: relative;
   top: 50%;
@@ -81,11 +106,15 @@
 }
 
 .side-menu-content {
-  margin-left: -500px;
   /*border: 5px solid black;*/
-  width: 200px;
+  width: 500px;
   height: 100%;
   background-color: blue;
   display: inline;
   float: right;
+  color: white;
 }
+
+/*#detail {
+  display: none;
+}*/
